--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "redux-test",
+  "name": "List",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/Sergii5854/hw-js-13-react-redux.github.io",
   "dependencies": {
     "immutability-helper": "^2.6.4",
     "react": "^16.2.0",
@@ -9,12 +10,19 @@
     "react-redux": "^5.0.6",
     "react-scripts": "1.1.0",
     "redux": "^3.7.2",
-    "redux-persist": "^5.5.0"
+    "redux-persist": "^5.5.0",
+    "gh-pages": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
+  },
+  "devDependencies": {
+    "create-react-app-sass": "^1.1.0",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6"
   }
 }
