--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "List",
+  "name": "list",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/Sergii5854/hw-js-13-react-redux.github.io",
+  "homepage": "https://github.com/Sergii5854/hw-js-13-react-redux.github.io/",
   "dependencies": {
     "immutability-helper": "^2.6.4",
     "react": "^16.2.0",
@@ -18,6 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
