--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
+src/components/ *.css
+src/components/*.css.map
 
 # dependencies
 /node_modules
