--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
-src/components/ *.css
-src/components/*.css.map
-
+*.css.map*
+*.css*
 # dependencies
 /node_modules
 .idea/
