--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "list",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/Sergii5854/hw-js-13-react-redux.github.io/",
+  "homepage": "https://github.com/Sergii5854/hw-js-13-react-redux.github.io",
   "dependencies": {
     "gh-pages": "^1.1.0",
     "immutability-helper": "^2.6.4",
     "react": "^16.2.0",
-    "react-datepicker": "^1.1.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-scripts": "1.1.0",
